Fixed reply font size on mobile device.

--- a/Website page 1/Portfolio/Magic/Day15.css
+++ b/Website page 1/Portfolio/Magic/Day15.css
@@ -107,5 +107,8 @@ h2{
       padding: 4px;
       font-size: 12px;
     }
+    #answer{
+      font-size:30px;
+    }
   }
 
